--- a/index.html
+++ b/index.html
@@ -4,9 +4,226 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Daetoun's CV</title>
 </head>
 <body>
-    
+    <section id="container">
+        <header>
+            <h1>Hello.</h1>
+            <div>
+                <h3>Frontend Developer</h3>
+                <h4><span>"</span> Code Meets design <span>"</span></h4>
+            </div>
+        </header>
+        <div class="intro-text">
+            <h1>My name is <span>Adetoun Olayemi</span></h1>
+            <p>An innovative Front-End Developer with about 3 years’ experience building and maintaining
+                responsive websites. Proficient in HTML, CSS and JavaScript plus, modern libraries and
+                frameworks. Passionate about usability and possess working knowledge Adobe Photoshop.
+            </p>
+            <dl class="personal-info">
+                <dt>Tel:</dt>
+                <dd>07057824862</dd>
+                <dt>Email:</dt>
+                <dd><a href="mailto:toun.olayemi2@gmail.com">toun.olayemi2@gmail.com</a></dd>
+                <dt>Website:</dt>
+                <dd><a href="valenteeena.github.io/Adetoun">valenteeena.github.io/Adetoun</a></dd>
+            </dl>
+        </div>
+        <div class="experience">
+            <h2>
+                <span class="txt-col">01.</span>
+                <span class="sect">Experience</span>
+            </h2>
+            <div class="exp-dv flx">
+                <div class="exp-dv-sec1">
+                    <p>Jan 2018 - Present</p>
+                </div>
+                <div class="exp-dv-sec2">
+                    <h3>Supreme Education Foundation Schools</h3>
+                    <h4 class="col">Computer Educator & Database Admin</h4>
+                    <p>Teaching students how to develop websites (HTML5, CSS, JS).</p>
+                    <p>Managing the schools website</p>
+                </div>
+            </div>
+            <div class="exp-dv flx">
+                <div class="exp-dv-sec1">
+                    <p>Oct 2018 - Present</p>
+                </div>
+                <div class="exp-dv-sec2">
+                    <h3>Tech 9
+                    <span class="col">Frontend Developer (Remote)</span></h3>
+                    <p>Converting Mockups to actual code</p>
+                    <p>Fetching, Consuming APIs and DOM Manipulation. VueJS, Angular etc</p>
+                </div>
+            </div>
+            <div class="exp-dv flx">
+                <div class="exp-dv-sec1">
+                    <p>Feb 2014 - Jan 2018</p>
+                </div>
+                <div class="exp-dv-sec2 lst">
+                    <h3>New Horizons
+                        <span class="col">Instructor/Web Designer</span></h3>
+                    <p>Web design and Advanced Web development (Using PHP, JavaScript MySQL, JQuery and Wordpress)</p>
+                    <p>MCSD Developing in HTML5 with JavaScript and CSS3 using Visual Studio</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="education">
+            <h2>
+                <span class="txt-col">02.</span>
+                <span class="sect">Education</span>
+            </h2>
+            <div class="edu-dv flx">
+                <div class="edu-dv-sec1">
+                    <h3>2008 - 2012</h3>
+                </div>
+                <div class="edu-dv-sec2">
+                    <h3>Bacbcock University</h3>
+                    <h4>Department of Computer Science</h4>
+                    <p>Bachelor of Science - Computer Science</p>
+                </div>
+            </div>
+            <div class="edu-dv flx">
+                <div class="edu-dv-sec1">
+                    <h3>2002 - 2008</h3>
+                </div>
+                <div class="edu-dv-sec2">
+                    <h3>Mater Christi Girls School</h3>
+                    <p>WASSCE/NECO- Sciences</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="tech">
+            <h2>
+                <span class="txt-col">03.</span>
+                <span class="sect">Technologies</span>
+            </h2>
+            <div class="flx j">
+            <div class="skills-dv1">
+                <div>
+                    <h4>HTML5</h4>
+                    <div class="sk-dv">
+                        <div class="skill html"></div>
+                    </div>
+                </div>
+                <div>
+                    <h4>CSS3</h4>
+                    <div class="sk-dv">
+                        <div class="skill css"></div>
+                    </div>
+                </div>
+                <div>
+                    <h4>JS</h4>
+                    <div class="sk-dv">
+                        <div class="skill js"></div>
+                    </div>
+                </div>
+                <div>
+                    <h4>ReactJS</h4>
+                    <div class="sk-dv">
+                        <div class="skill react"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="skills-dv2">
+                <div>
+                    <h4>Angular JS</h4>
+                    <div class="sk-dv">
+                        <div class="skill angular"></div>
+                    </div>
+                </div>
+                <div>
+                    <h4>VueJS</h4>
+                    <div class="sk-dv">
+                        <div class="skill vue"></div>
+                    </div>
+                </div>
+                <div>
+                    <h4>JQuery</h4>
+                    <div class="sk-dv">
+                        <div class="skill jquery"></div>
+                    </div>
+                </div>
+                <div>
+                    <h4>GIT</h4>
+                    <div class="sk-dv">
+                        <div class="skill git"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="learn">
+            <h2>
+                <span class="txt-col">04.</span>
+                <span class="sect">Learning</span>
+            </h2>
+            <ul class="learn-sk">
+                <Li>Python</Li>
+                <li>Ruby</li>
+                <li>ReactJS</li>
+                <li>Mongo DB</li>
+            </ul>
+        </div>
+        <div class="proj">
+            <h2>
+                <span class="txt-col">05.</span>
+                <span class="sect">Projects</span>
+            </h2>
+            <dl class="proj-div">
+                <dt>Four Card Feather Section</dt>
+                <dd><a href="https://valenteeena.github.io/project2/index.html">https://valenteeena.github.io/project2/index.html</a></dd>
+                <dt>Base Apparel Coming Soon Page</dt>
+                <dd><a href="https://valenteeena.github.io/Project%201/index.html">https://valenteeena.github.io/Project%201/index.html</a></dd>
+                <dt>Pricing Component with Toggle</dt>
+                <dd><a href="https://valenteeena.github.io/project6/index.html">https://valenteeena.github.io/project6/index.html</a></dd>
+                <dt>Project Tracking Intro Component</dt>
+                <dd><a href="https://valenteeena.github.io/project3/index.html">https://valenteeena.github.io/project3/index.html</a></dd>
+                <dt>APIN Health portal</dt>
+                <dd><a href="https://jobapplication.apin.org.ng/application/index.php">https://jobapplication.apin.org.ng/application/index.php</a></dd>
+                <dt>ORION Invest</dt>
+                <dd><a href="https://orioninvest.netlify.app/">https://orioninvest.netlify.app/</a></dd>
+            </dl>
+        </div>
+
+        <div class="foot-div flx">
+            <div class="attitude">
+                <h2>
+                    <span class="txt-col">06.</span>
+                    <span class="sect">Attitude</span>
+                </h2>
+                <h4>Always willing to Learn</h4>
+                <h4>Prefer working in a team</h4>
+                <h4>Emotionally Intelligent</h4>
+                <h4>I love finishing what I start</h4>
+            </div>
+            <div class="interests">
+                <h2>
+                    <span class="txt-col">07.</span>
+                    <span class="sect">Interests</span>
+                </h2>
+                <div class="hob mus">
+                    <img src="music-note.png" alt="music" width="50">
+                    <h4>Music Addict</h4>
+                </div>
+                <div class="hob teach">
+                    <img src="teach.png" alt="Teaching" width="50">
+                    <h4>Teaching</h4>
+                </div>
+                <div class="hob read">
+                    <img src="book.png" alt="reading" width="50">
+                    <h4>Reading</h4>
+                </div>
+                <div class="hob blog">
+                    <img src="blog.png" alt="blogging" width="50">
+                    <h4>Blogging</h4>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
